# Scarab

./: .breakpoints  .gitignore  CHANGELOG.md  LICENSE  README.md  USAGE.md  keep_alive.py  main.py  prefixes.json  pyproject.toml  requirements.txt  wop.txt
cogs/: admin.py  dice_roll.py  insults.py  into_server.py  mc_server.py  misc.py  reddit.py  useful.py
